--- a/docs/config/sfmc-config-behavioral-triggers.mdx
+++ b/docs/config/sfmc-config-behavioral-triggers.mdx
@@ -211,7 +211,7 @@ FROM abandoned_cart_123456789
 
 Be sure to update the name of the Behavioral Trigger Data Extension.
 
-You can leverage the same automation to be a trigger for the Journey Entry to ensure that all records in the Journey already exist as Subscribers.
+You can leverage the same automation to trigger the Journey Entry to ensure that all records in the Journey already exist as Subscribers.
 
 :::
 
@@ -374,7 +374,7 @@ The third Behavioral Trigger scenario - Abandoned Cart - also has its own data l
 Few things here are important to consider:
 
 1. As you can see, there are four possible parameters for each item - `item` and `unique_id` are required and must be available in your Einstein Product Catalog to work. The other two - `quantity` and `price` are optional.
-2. The `price` parameter here is different from `price` or `sales_price` available in [Catalog Update](#catalog-update-streaming). The Catalog ones are global - the same for all your customers. The `price` pushed within Track Cart is unique for this particular customer and might differ from the global ones (think VIP status or a coupon used). It won't update your Einstein Catalog.
+2. The `price` parameter here is different from `price` or `sales_price` available in [Catalog Update](#catalog-update-streaming). The Catalog ones are global - the same for all your customers. The `price` pushed within Track Cart is unique for this customer and might differ from the global ones (think VIP status or a coupon used). It won't update your Einstein Catalog.
 3. Always push the whole cart. If your customer has more than one item in it - put all of them in this data layer. If a customer deletes an item from the cart - push the data layer without the deleted one. The last version pushed is considered the final state of the cart for personalisation purposes.
 4. Always be sure to clear the Track Cart data whenever the cart data is no longer needed. If the customer purchased the products, be sure to use the [Track Purchase](#track-purchase) data layer. If the customer deleted all the products from their cart, use the Clear Cart parameter:
 
@@ -452,12 +452,12 @@ When you click that block after adding it to the email, you will be able to limi
 It's easy, it's quick, but there are multiple issues if you want anything a bit more customised for your needs. With the out-of-the-box solution:
 
 1. You don't have a straightforward way to control the style of this information. You can only go to the Styling tab of the editor and modify the CSS available there.
-2. You are limited only to the fields that you [configured for the Product Catalog](#catalog-and-product-attributes). For example, you cannot use the individual price that you passed in the [Track Cart](#track-cart) data layer. You can vote for it on [IdeaExchange](https://trailblazer.salesforce.com/ideaView?id=0874V0000003lCKQAY).
+2. You are limited only to the fields that you [configured for the Product Catalog](#catalog-and-product-attributes). For example, you cannot use the individual price you passed in the [Track Cart](#track-cart) data layer. You can vote for it on [IdeaExchange](https://trailblazer.salesforce.com/ideaView?id=0874V0000003lCKQAY).
 3. There is no information on how to access the data outside of the Content Block - but you can learn about it [later in this article](#6-response-parsing).
 4. You cannot leverage Einstein API's full potential, as the hard-coded request does not have a parameter responsible for pulling the [Einstein Custom Profile Attributes](#user-and-profile-attributes). You can vote for it on [IdeaExchange](https://trailblazer.salesforce.com/ideaView?id=0874V0000003lB7QAI).
 5. You cannot use multiple Content Blocks pointing to various Behavioral Trigger scenarios (for example,first focus on the cart and then present the wishlist).
 
-As far as you can fix the first issue with good CSS knowledge, the rest require a bit more work.
+As far as you can fix the first issue with good CSS knowledge, the rest require more work.
 
 So what can you do? Configure the Content Block to be as close as possible to what you want, go to Code View of your Email and look for `Concat('{"trigger_payload":"', data, '"}')`. It starts the code responsible for Behavioral Trigger Content Block.
 
@@ -831,7 +831,7 @@ try {
 
 The try/catch block is a great idea, but as it has separate scope in SSJS, it means that no SSJS variable from within will be available outside of it. Thankfully the [other part of the code](#6-response-parsing) is sharing the Behavioral Trigger data using AMPScript variables.
 
-If you want to have access to the SSJS ones you can declare them before the try/catch starts, or pull them from the AMPScript.
+If you want to access the SSJS ones, you can declare them before the try/catch starts or pull them from the AMPScript.
 
 ### 3. Settings & Markup Fragments
 
@@ -850,7 +850,7 @@ Remember, however, that the Behavioral Trigger Content Block use classes visible
 
 :::note You Should Know
 
-Current version of Behavioral Trigger Content Block is not rendering correctly on Yahoo, AOL and Windows Outlook. Learn more [here](../../../ideas#behavioral-trigger-content-block-rendering-on-yahoo-aol-windows-outlook).
+The current version of Behavioral Trigger Content Block is not rendering correctly on Yahoo, AOL and Windows Outlook. Learn more [here](../../../ideas#behavioral-trigger-content-block-rendering-on-yahoo-aol-windows-outlook).
 
 Fix it by changing `rem` units in `markupFragments` to `px` ones.
 
@@ -869,9 +869,9 @@ You can also configure them within the Behavioral Trigger Content Block UI. Resp
 - "If the subscriber's abandoned items have changed since the triggering event, include the updated items" or
 - "Only show sale price if sale price is > 0"
 
-Both checkboxes are available in the Product Fields section. The second one, however, is visible only if you add `sale_price` field.
+Both checkboxes are available in the Product Fields section. The second one, however, is visible only if you add the `sale_price` field.
 
-If you don't enable the `useRecentItems`, the Content Block will take the products initially pushed with [Track Cart](#track-cart) Collect.js. If you use it, it will instead take the latest data available that, in some cases, might be either bigger (if your customer added few items) or smaller (if he deleted some or just cleared the whole cart). There is also a block that stops the send if there aer no more items in the current cart.
+If you don't enable the `useRecentItems`, the Content Block will take the products initially pushed with [Track Cart](#track-cart) Collect.js. If you use it, it will instead take the latest data available that, in some cases, might be either bigger (if your customer added few items) or smaller (if he deleted some or just cleared the whole cart). There is also a block that stops the send if there are no more items in the current cart.
 
 As for `useSalePricing`, it is much less straightforward. What "Only show sale price if sale price is > 0" enabled does is check whether there is sale price and whether it is lower than the regular price and - if yes - it adds strike-through style to the regular price — end of the story. For anything more attractive, you will need to play with custom CSS and maybe additional SSJS logic.
 
@@ -883,9 +883,9 @@ var mid = Platform.Variable.GetValue("@mid");
 var event_locale = Platform.Variable.GetValue("@event_locale");
 ```
 
-Two first lines here are pulling data from the AMPScript described in first highlight. As mentioned, it can be optimised by making the personalisation here and removing AMPScript alltogether.
+Two first lines here are pulling data from the AMPScript described in the first highlight. As mentioned, it can be optimised by making the personalisation here and removing AMPScript altogether.
 
-More interesting, however, is the third line. You can configure localisation for your products in [Email Recommendations Configuration](#user-and-profile-attributes), but it is not used by the Behavioral Triggers - officially. Thanks to this little line you can - even with the built-in standard Content Block - declare the locale source for the Subscriber and set it to `@event_locale` AMPScript variable. Bam, your Behavioral Triggers are now localised.
+More interesting, however, is the third line. You can configure localisation for your products in [Email Recommendations Configuration](#user-and-profile-attributes), but it is not used by the Behavioral Triggers - officially. Thanks to this little line, you can - even with the built-in standard Content Block - declare the locale source for the Subscriber and set it to `@event_locale` AMPScript variable. Bam, your Behavioral Triggers are now localised.
 
 ### 5. Building the API query
 
@@ -908,7 +908,7 @@ if(event_locale){
 var url = protocol + "://" + hostname + "/" + mid + "/trigger" + qs;
 ```
 
-The above snippet is responsible for building the URL that is used for an `HTTP.Post` API call to Einstein Backend (IgoDigital). You can make a simple addition that will enable you access to [Einstein Custom Profile Attributes](#user-and-profile-attributes). Must-have, if you want to boost engagement with personalisation for new customers.
+The above snippet is responsible for building the URL that is used for an `HTTP.Post` API call to Einstein Backend (IgoDigital). You can make a simple addition that will enable you access to [Einstein Custom Profile Attributes](#user-and-profile-attributes). Must-have if you want to boost engagement with personalisation for new customers.
 
 To do so, just before the line highlighted in the snippet above add a new one with:
 
@@ -950,31 +950,31 @@ for(var responseField in response) {
 
 The code you see above is responsible for reading the response from Einstein Backend (Igodigital). It goes through each element of the response and creates a separate AMPScript variable with an appropriate value.
 
-1. For each element of the `products` key, it creates a variable build with `item_` prefix, value name and `_X` suffix, where X is the counter of the item (so 1 for the first item, 2 for the second and so on). It means you can get the first link to the first item by calling `@item_link_1` variable. To get the name of the second item goes with `@item_name_2`.
-2. If the response contains `current_cart` key (it is available only if the [Track Cart](#track-cart) was triggered), then it also creates variables for it. The structure is nearly the same - just the prefix changes to `cart_`. The most compelling use case here? You can get the `price` information that you pushed via [Track Cart](#track-cart) (the one unique to specific cart, not coming from the Product Catalog) by calling `@cart_amount_1` for the first item.
+1. For each element of the `products` key, it creates a variable build with `item_` prefix, value name and `_X` suffix, where X is the counter of the item (so 1 for the first item, 2 for the second and so on). It means you can get the first link to the first item by calling the `@item_link_1` variable. To get the name of the second item goes with `@item_name_2`.
+2. If the response contains the `current_cart` key (it is available only if the [Track Cart](#track-cart) was triggered), it also creates variables for it. The structure is nearly the same - just the prefix changes to `cart_`. The most compelling use case here? You can get the `price` information that you pushed via [Track Cart](#track-cart) (the one unique to a specific cart, not coming from the Product Catalog) by calling `@cart_amount_1` for the first item.
 3. There is even a system that gets [Custom Profile Attributes](#user-and-profile-attributes) as AMPScript variables! It uses `user_` prefix, so if you want to get, for example, the gender - call `@user_gender` variable.
-4. All other keys of the response are also created with just their name. So to get information whether the cart converted you can call `@purchased` variable.
+4. All other keys of the response are also created with just their name. So to get information on whether the cart converted, you can call `@purchased` variable.
 
 To check what is available to you, check example [API responses](#api-responses) coming from Einstein Backend.
 
 :::note You Should Know
 
 1. The `current_cart` key and the `amount` variable is available only for the Abandoned Cart Behavioral Trigger. Wishlist and Browse only contain `products` information coming from the Product Catalog.
-2. Even though there is already a code that parses [Custom Profile Attributes](#user-and-profile-attributes), it won't give you anything on the built-in standard Behavioral Trigger Content Block, because it won't have the `user` key populated. You must enable each attribute in the [API call](#5-building-the-api-query).
-3. If you want to use more then one Abandonment Engagement in one email, you will have to alter the prefixes in this code not to overwrite the AMPScript variables.
+2. Even though there is already a code that parses [Custom Profile Attributes](#user-and-profile-attributes), it won't give you anything on the built-in standard Behavioral Trigger Content Block. It won't have the `user` key populated. You must enable each attribute in the [API call](#5-building-the-api-query).
+3. If you want to use more than one Abandonment Engagement in one email, you will have to alter the prefixes in this code not to overwrite the AMPScript variables.
 
 :::
 
 Those AMPScript variables are a must if you want to create a Call to Action button that will rebuild the cart in your e-commerce. Remember, however, that it is custom development without any out-of-the-box snippets from Salesforce.
 
-The rest of the code is just taking care of proper display of the information in the email and stopping the send with `RaiseError` if the customer purchased the cart or the API did not respond. It is added to the email using `%%=treatascontentarea('BT Trigger', @content)=%%`.
+The rest of the code is just taking care of the proper display of the information in the email and stopping the send with `RaiseError` if the customer purchased the cart or the API did not respond. It is added to the email using `%%=treatascontentarea('BT Trigger', @content)=%%`.
 
 </TabItem>
 </Tabs>
 
 ### API Responses
 
-To fully leverage the customisation options of the Behavioral Trigger Content Block, below, you can check the sample responses from Einstein Backend (IgoDigital). They will help you know what AMPScript variables can be available after the Content Block.
+To fully leverage the Behavioral Trigger Content Block's customisation options, you can check the sample responses from Einstein Backend (IgoDigital) available below. They will help you know what AMPScript variables can be available after the Content Block.
 
 <Tabs
     groupId='BehaviouralTriggerResponse'
@@ -1053,7 +1053,7 @@ To fully leverage the customisation options of the Behavioral Trigger Content Bl
 
 :::note You Should Know
 
-1. In the example above, you can see that there is `"gender"` data in the `"user"` key. You will see information here only if you [alter your API call](#5-building-the-api-query). Otherwise, it will be empty.
+1. You can see that there is `"gender"` data in the `"user"` key in the example above. You will see information here only if you [alter your API call](#5-building-the-api-query). Otherwise, it will be empty.
 2. The `amount` key is available in both `products` and `current_cart` keys, but it is in a string format. Other prices (`regular_price` and `sale_price`) are integers.
 3. In `same_products`, you will have information (`"Y"`/`"N"`) whether the Cart content changed between the moment you pushed this data and the API call.
 
@@ -1144,17 +1144,17 @@ Response structure is the same as for Abandoned Wishlist.
 
 ## Debugging Behavioral Triggers
 
-During Behavioral Trigger implementation there are at least three key phases when you might need to debug your solution. As you will be merging multiple systems and working on time-sensitive data using a fresh feature, possibility to look behind the curtain will be crucial. Thankfully, there are few options that we can use.
+There are at least three critical phases during Behavioural Trigger implementation when you might need to debug your solution. As you will be merging multiple systems and working on time-sensitive data using a new feature, the possibility to look behind the curtain will be crucial. Thankfully, there are few options that we can use.
 
 ### Debugging Collect.js
 
-First thing to check is your front end Collect.js implementation. To quickly check, whether Collect.js is available on your website open Developer Tools in your Browser and go to Console tab. In there, write `_etmc`.
+The first thing to check is your front end Collect.js implementation. To quickly review whether Collect.js is available on your website, open Developer Tools in your browser and go to the Console tab. In there, write `_etmc`.
 
-If you see `ReferenceError: _etmc is not defined`, it means that the script is not available. Make sure that you are checking for it on a page that is supposed to have Einstein / Behavioral Triggers implemented and that the script is added correctly.
+If you see `ReferenceError: _etmc is not defined`, it means that the script is not available. Ensure that you are checking for it on a page that is supposed to have Einstein / Behavioral Triggers implemented and that the script is added correctly.
 
-If the script is implemented, you will see a huge Object containing over a dozen of keys - many of which are the functions that pass the data from your website to IgoDigital.
+If the script is implemented, you will see an Object containing over a dozen of keys. Many of which are the functions that pass the data from your website to IgoDigital.
 
-Let's leverage its power by writing in the console `_etmc.debug = true` to enable debugging mode of Collect.js. Once completed, it will log every change to applied to the dataLayer. Make a tracked action - like adding a product to a cart - to see it work.
+Let's leverage its power by writing in the console `_etmc.debug = true` to enable debugging mode of Collect.js. Once set, it will log every change applied to the dataLayer. Make a tracked action - like adding a product to a cart - to see it work.
 
 ```json title="Example data logged after enabling debug and adding product to the cart"
 {
@@ -1175,7 +1175,7 @@ Let's leverage its power by writing in the console `_etmc.debug = true` to enabl
 
 :::note You Should Know
 
-You can check how Collect.js works and what are the other features of this script by reviewing its contents. To do this, go to the link contained in your base Collect code. It should be: `http://YOUR_MID.collect.igodigital.com/collect.js`.
+You can check how Collect.js works by reviewing its contents. To do this, go to the link contained in your base Collect code. It should be: `http://YOUR_MID.collect.igodigital.com/collect.js`.
 
 :::
 
@@ -1187,13 +1187,13 @@ https://stack7.collect.igodigital.com/c2/northerntrailoutfitters/track_cart?payl
 
 Using either of those two tools will allow you to make sure that:
 
-1. You have correctly implemented the Collect.js script
-2. It is correctly assigned to the events happening on you website you want to track
-3. It captures necessary information, like price, name of the product, or id
-4. It passes the correctly structured JSON with this data to IgoDigital
-5. You receive status 200 on the API call in Network tab
+1. You have correctly implemented the Collect.js script.
+2. It is correctly assigned to the events happening on your website you want to track.
+3. It captures necessary information, like price, name of the product, or id.
+4. It passes the correctly structured JSON with this data to IgoDigital.
+5. You receive status 200 on the API call in the Network tab.
 
-Once all of the above is validated, it means that the correct data should be available to Salesforce Marketing Cloud Einstein and Behavioral Triggers.
+Once all of the above is validated, the correct data should be available to Salesforce Marketing Cloud Einstein and Behavioral Triggers.
 
 ### Debugging Data Flow
 
@@ -1202,19 +1202,19 @@ Now it's time to check whether the data is coming through to your Salesforce Mar
 There are few things to check:
 
 1. Go to Journey Builder » Behavioral Triggers and check whether there is a required Trigger Type and its Status is Active.
-2. Go to Status tab and check whether Status next to Collect Tracking Code Type is Ok. Don't worry here about the numbers in Collected Today - those are frequently not aligned with reality.
-3. Go to Audience Builder » Contact Builder » Data Extensions and in the main local folder look for `IGO_PRODUCTS` and `IGO_PROFILES` Data Extensions. You should see the captured users and products details that can be used by Einstein solutions. It validates that the data is flowing through Collect.js.
-4. Finally it's time to check in the same main local folder the Data Extension related to the Behavioral Trigger Type you have activated. It should be named `abandoned_TYPE_01234` (with `TYPE` being wishlist, cart or browse depending on what you enabled).
+2. Go to the Status tab and check whether the Status next to Collect Tracking Code Type is Ok. Don't worry here about the numbers in Collected Today - those are frequently not aligned with reality.
+3. Go to Audience Builder » Contact Builder » Data Extensions and in the main local folder look for `IGO_PRODUCTS` and `IGO_PROFILES` Data Extensions. You should see the captured users and products details that Einstein solutions can use. It validates that the data is flowing through Collect.js.
+4. Finally, it's time to check in the same main local folder the Data Extension related to the Behavioral Trigger Type you have activated. It should be named `abandoned_TYPE_01234` (with `TYPE` being wishlist, cart or browse depending on what you enabled).
 
 Remember that the Behavioral Trigger data will be delayed by the amount of time [configured](#behavioral-triggers-configuration) during the setup (between 15 minutes and 3 hours). For debugging purposes, the shorter, the better.
 
-If you do not see data in the above places - most probable cause is a problem with Collect.js script implementation. Go to previous debugging step and check whether everything is set up correctly. If you are certain that all is good and after waiting the required amount of time, contact Salesforce Support for help.
+If you do not see data in the above places - the most probable cause is Collect.js script implementation. Go to the previous debugging step and check whether everything is set up correctly. If you are confident that all is good and after waiting the required amount of time, contact Salesforce Support for help.
 
 ### Debugging BT Content Block
 
-Once the above steps are done, it's time to play with [Behavioral Trigger Content Block](#behavioral-trigger-content-block).
+Once you complete the above steps, it's time to play with [Behavioral Trigger Content Block](#behavioral-trigger-content-block).
 
-The easiest way to check whether everything works fine is adding the default one and checking whether the data makes sense. The hard part starts when there is an issue with the outcome (wrong data, missing data or just no preview).
+The easiest way to check whether everything works fine is by adding the default one and checking whether the data makes sense. The hard part starts when there is an issue with the outcome (incorrect data, missing data or just no preview).
 
 I use a simple script to find what might be the source of the issue:
 
@@ -1275,10 +1275,10 @@ I use a simple script to find what might be the source of the issue:
 </script>
 ```
 
-This is very basic script, but helps with finding the source of an issue. As you can see, a lot of it is just a copy paste of the original [Behavioral Trigger Content Block](#behavioral-trigger-content-block). But instead of displaying beautiful abandoned cart message, it will show you Subscriber Key, Email Address, raw data that is being shot to IdoDigital Backend and the response from it.
+It is a very basic script but helps with finding the source of an issue. As you can see, a lot of it is just a copy-paste of the original [Behavioral Trigger Content Block](#behavioral-trigger-content-block). But instead of displaying a beautiful abandoned cart message, it will show you Subscriber Key, Email Address, raw data that is being shot to IdoDigital Backend and the response from it.
 
-Using those information you can validate whether the raw data, email address and subscriber key all belong to the same Contact and whether the response is aligned with what you were pushing during your testing on the website.
+Using that information, you can validate whether the raw data, email address and subscriber key belong to the same Contact and whether the response is aligned with what you were pushing during your testing on the website.
 
-If there is anything wrong with those information - check again, whether you have a correct Collect.js implementation, whether it captures the correct product information and whether it assigns it to the correct Contact data.
+If there is anything wrong with that information, check whether you have a correct Collect.js implementation, whether it captures the accurate product information and assigns it to the right Contact data.
 
-If the response is correct, but there is still some issues with what the Behavioral Trigger Content Block displays - welcome to the new adventure - a Custom Behavioral Trigger Content Block creation.
+If the response is correct, but there are still some issues with what the Behavioral Trigger Content Block displays - welcome to the new adventure - a Custom Behavioral Trigger Content Block creation.
