--- a/docs/config/sfmc-config-behavioral-triggers.mdx
+++ b/docs/config/sfmc-config-behavioral-triggers.mdx
@@ -46,7 +46,7 @@ As you can see, if you already use Einstein Recommendations, most of the necessa
 
 ### How the Behavioral Triggers work
 
-Behavioral Triggers seems to be easy to implement, but a lot is going in the back end. It is good to understand its basics, as it might help a lot when triaging a problem or customising the solution.
+Behavioral Triggers seems to be easy to implement, but a lot is going in the backend. It is good to understand its basics, as it might help a lot when triaging a problem or customising the solution.
 
 1. A customer enters your e-commerce site - you trigger first [Collect.js](#collectjs) scripts to capture the Session and Page View.
 2. Customer clicks on a product page - you trigger the [Page View data layer](#page-view-data-layer) with a link to that product (Abandoned Browse scenario).
@@ -441,7 +441,7 @@ You may suppress all of the configured trackings by using a data layer based on 
 
 ## Behavioral Trigger Content Block
 
-Now you can go forward with Behavioral Triggers. [Collect.js](#collectjs) will push the required data to Einstein backend, and after Session Timeout Limit, it will evaluate it against Suppression Rules as per your [configuration](#Behavioural-triggers-configuration). Then, the Behavioral Triggers adds Abandoned Engagement data to the respective [Data Extension](#Behavioural-triggers-configuration). Now it's time to use it.
+Now you can go forward with Behavioral Triggers. [Collect.js](#collectjs) will push the required data to Einstein backend, and after Session Timeout Limit, it will evaluate it against Suppression Rules as per your [configuration](#Behavioral-triggers-configuration). Then, the Behavioral Triggers adds Abandoned Engagement data to the respective [Data Extension](#Behavioral-triggers-configuration). Now it's time to use it.
 
 The standard way the leverage this information is to use those abandonment Data Extensions as a Journey Entry Source. The real magic, however, will happen in the email you will be sending in this Journey. And that is thanks to the out-of-the-box Behavioral Trigger Content Block.
 
@@ -467,7 +467,7 @@ Below you can see two tabs.
 2. In the **Code Highlights** tab, I focus on some part of the code that I found exciting and deserve some attention.
 
 <Tabs
-    groupId='BehaviouralTriggerContentBlock'
+    groupId='BehavioralTriggerContentBlock'
     defaultValue='highlights'
     values={[
         {label: 'Original Code', value: 'original'},
@@ -816,7 +816,7 @@ Below you can see two tabs.
 
 The first four lines of the Behavioral Trigger Content Block code are already interesting. They are using AMPScript, although the rest is in SSJS. It could easily be written in SSJS altogether for more optimised execution.
 
-You can also see that they are pulling the Behavioural data by using a personalisation string on `data` - the Abandoned Engagement Data Extension column containing encrypted information. If you want to have more control over the source of this information, you can think about making a lookup here. It would allow you to even use multiple Content Blocks in one email (or mix browsed, wishlisted and added to cart items in one block).
+You can also see that they are pulling the behavioural data by using a personalisation string on `data` - the Abandoned Engagement Data Extension column containing encrypted information. If you want to have more control over the source of this information, you can think about making a lookup here. It would allow you to even use multiple Content Blocks in one email (or mix browsed, wishlisted and added to cart items in one block).
 
 ### 2. Try/Catch block
 
@@ -977,7 +977,7 @@ The rest of the code is just taking care of the proper display of the informatio
 To fully leverage the Behavioral Trigger Content Block's customisation options, you can check the sample responses from Einstein Backend (IgoDigital) available below. They will help you know what AMPScript variables can be available after the Content Block.
 
 <Tabs
-    groupId='BehaviouralTriggerResponse'
+    groupId='BehavioralTriggerResponse'
     defaultValue='cart'
     values={[
         {label: 'Abandoned Cart', value: 'cart'},
@@ -1144,17 +1144,17 @@ Response structure is the same as for Abandoned Wishlist.
 
 ## Debugging Behavioral Triggers
 
-There are at least three critical phases during Behavioural Trigger implementation when you might need to debug your solution. As you will be merging multiple systems and working on time-sensitive data using a new feature, the possibility to look behind the curtain will be crucial. Thankfully, there are few options that we can use.
+There are three critical steps of Behavioral Trigger implementation when you might need to debug your solution. As you will be merging multiple systems and working on time-sensitive data using a new feature, look behind the curtain will be crucial. Thankfully, there are few options that we can use.
 
 ### Debugging Collect.js
 
-The first thing to check is your front end Collect.js implementation. To quickly review whether Collect.js is available on your website, open Developer Tools in your browser and go to the Console tab. In there, write `_etmc`.
+The first thing to check is your frontend Collect.js implementation. To quickly review whether Collect.js is available on your website, open Developer Tools in your browser and go to the Console tab. In there, write `_etmc`.
 
-If you see `ReferenceError: _etmc is not defined`, it means that the script is not available. Ensure that you are checking for it on a page that is supposed to have Einstein / Behavioral Triggers implemented and that the script is added correctly.
+If you see `ReferenceError: _etmc is not defined`, it means that the script is not available. Ensure that you are checking a page that is supposed to have Behavioral Triggers implemented and that the script is added correctly.
 
 If the script is implemented, you will see an Object containing over a dozen of keys. Many of which are the functions that pass the data from your website to IgoDigital.
 
-Let's leverage its power by writing in the console `_etmc.debug = true` to enable debugging mode of Collect.js. Once set, it will log every change applied to the dataLayer. Make a tracked action - like adding a product to a cart - to see it work.
+Now you can leverage its power by writing in the console `_etmc.debug = true` to enable debugging mode of Collect.js. Once set, it will log every change applied to the dataLayer. Make a tracked action - like adding a product to a cart - to see it work.
 
 ```json title="Example data logged after enabling debug and adding product to the cart"
 {
@@ -1179,7 +1179,7 @@ You can check how Collect.js works by reviewing its contents. To do this, go to 
 
 :::
 
-Another option to observe what Collect.js is sending to Einstein IgoDigital backend is to go to Developer Tools » Network and look for calls made to `igodigital.com` address. You will see mirror data in form of API requests. For example, above JSON will be displayed there as a payload:
+Another option to observe what Collect.js is sending to Einstein IgoDigital backend is to go to Network tab of the Developer Tools and look for calls made to `igodigital.com` address. You will see the above data in form of API request payload:
 
 ```
 https://stack7.collect.igodigital.com/c2/northerntrailoutfitters/track_cart?payload={"cart":[{"item":"2020572","unique_id":"2020572AEUAEL","name":"Women’s Red Box Pullover Hoodie","url":"https://production-internal-ccdemo.demandware.net/s/NTOSFRA/default/women%E2%80%99s-red-box-pullover-hoodie-2020572AEUAEL.html","price":50,"sale_price":50,"item_type":"product"}],"url":"https://production-internal-ccdemo.demandware.net/s/NTOSFRA/default/women%E2%80%99s-red-box-pullover-hoodie-2020572BHX.html?source=igodigital"}
@@ -1188,8 +1188,8 @@ https://stack7.collect.igodigital.com/c2/northerntrailoutfitters/track_cart?payl
 Using either of those two tools will allow you to make sure that:
 
 1. You have correctly implemented the Collect.js script.
-2. It is correctly assigned to the events happening on your website you want to track.
-3. It captures necessary information, like price, name of the product, or id.
+2. It is correctly assigned to the website events you want to track.
+3. It captures necessary information, like price, name of the product, id.
 4. It passes the correctly structured JSON with this data to IgoDigital.
 5. You receive status 200 on the API call in the Network tab.
 
@@ -1201,10 +1201,10 @@ Now it's time to check whether the data is coming through to your Salesforce Mar
 
 There are few things to check:
 
-1. Go to Journey Builder » Behavioral Triggers and check whether there is a required Trigger Type and its Status is Active.
-2. Go to the Status tab and check whether the Status next to Collect Tracking Code Type is Ok. Don't worry here about the numbers in Collected Today - those are frequently not aligned with reality.
-3. Go to Audience Builder » Contact Builder » Data Extensions and in the main local folder look for `IGO_PRODUCTS` and `IGO_PROFILES` Data Extensions. You should see the captured users and products details that Einstein solutions can use. It validates that the data is flowing through Collect.js.
-4. Finally, it's time to check in the same main local folder the Data Extension related to the Behavioral Trigger Type you have activated. It should be named `abandoned_TYPE_01234` (with `TYPE` being wishlist, cart or browse depending on what you enabled).
+1. Go to Journey Builder » Behavioral Triggers and check whether there is a required Trigger Type available with `Active` status.
+2. Go to the Status tab and check whether the Status next to Collect Tracking Code Type is `Ok`. Don't worry about the numbers in Collected Today - those are frequently not aligned with reality.
+3. Go to Audience Builder » Contact Builder » Data Extensions and in the main local folder look for `IGO_PRODUCTS` and `IGO_PROFILES` Data Extensions. You should see the captured users and products details. It validates that the data is flowing through Collect.js.
+4. Finally, it's time to check the Data Extension related to the Behavioral Trigger Type you have activated. It should be in the same main local folder, named `abandoned_TYPE_01234` (with `TYPE` being `wishlist`, `cart` or `browse` depending on what you enabled).
 
 Remember that the Behavioral Trigger data will be delayed by the amount of time [configured](#behavioral-triggers-configuration) during the setup (between 15 minutes and 3 hours). For debugging purposes, the shorter, the better.
 
@@ -1263,6 +1263,8 @@ I use a simple script to find what might be the source of the issue:
         if (result.StatusCode == 200) {
             var response = Platform.Function.ParseJSON(result.Response[0]);
         }
+
+        // Print it in the Email
         Write('Your Subscriber Key: ' + subKey + '<br>')
         Write('Your Email: ' + email + '<br>')
         Write('Your Data: ' + data + '<br>')
@@ -1281,4 +1283,4 @@ Using that information, you can validate whether the raw data, email address and
 
 If there is anything wrong with that information, check whether you have a correct Collect.js implementation, whether it captures the accurate product information and assigns it to the right Contact data.
 
-If the response is correct, but there are still some issues with what the Behavioral Trigger Content Block displays - welcome to the new adventure - a Custom Behavioral Trigger Content Block creation.
+If the response is correct, but there are still some issues with what the Behavioral Trigger Content Block displays - check Content Block settings. If something is still off - welcome to the new adventure - a Custom Behavioral Trigger Content Block creation.
