--- a/docs/config/sfmc-config-behavioral-triggers.mdx
+++ b/docs/config/sfmc-config-behavioral-triggers.mdx
@@ -239,6 +239,14 @@ Be sure to create all those Custom Profile Attributes in your Einstein implement
 
 There are two options to keep your Einstein Catalog up-to-date. Manual uploads and Catalog Update Streaming.
 
+:::note You Should Know
+
+With April 2021 Marketing Cloud Release the Streaming Updates using Collect.js will be deprecated. The way forward will be Streaming Updates via API. Read more [here](https://help.salesforce.com/articleView?id=sf.mc_rn_april_2021_collect_tracking_code_streaming.htm&type=5).
+
+As existing implementation will be available for some time still, I'm keeping this section until the solution will be fully killed.
+
+:::
+
 Manual uploads might be fine if you nearly never update items or their parameters in your e-commerce. For all other use cases, you should be using Catalog Update Streaming Data Layer.
 
 ```html {4-16} title="Page View Data Layer"
