Added info about Streaming Update deprecation

--- a/docs/config/sfmc-config-behavioral-triggers.mdx
+++ b/docs/config/sfmc-config-behavioral-triggers.mdx
@@ -241,9 +241,9 @@ There are two options to keep your Einstein Catalog up-to-date. Manual uploads a
 
 :::note You Should Know
 
-With April 2021 Marketing Cloud Release the Streaming Updates using Collect.js will be deprecated. The way forward will be Streaming Updates via API. Read more [here](https://help.salesforce.com/articleView?id=sf.mc_rn_april_2021_collect_tracking_code_streaming.htm&type=5).
+With [April 2021 Marketing Cloud Release](https://help.salesforce.com/articleView?id=sf.mc_rn_april_2021_collect_tracking_code_streaming.htm&type=5) the Collect.js Streaming Updates will be deprecated. The way forward will be Streaming Updates via API. Read more [here](https://help.salesforce.com/articleView?id=sf.mc_rn_april_2021_collect_tracking_code_streaming.htm&type=5).
 
-As existing implementation will be available for some time still, I'm keeping this section until the solution will be fully killed.
+As existing implementation will be available for some time still to allow for migration, I'm keeping this section until the end of the grace period.
 
 :::
 
